--- a/cw-calendar/MainWindow.xaml
+++ b/cw-calendar/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:cw_calendar="clr-namespace:cw_calendar" d:DataContext="{d:DesignInstance Type=cw_calendar:CalendarOrganizer}"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
-        Title="Calendar App" Height="350" Width="525">
+        Title="Календарь (Органайзер)" Height="350" Width="525">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -15,31 +15,35 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,0,0,10">
-            <TextBlock Text="Selected Date: " FontWeight="Bold" />
+            <TextBlock Text="Выбранная дата: " FontWeight="Bold" />
             <TextBlock Text="{Binding SelectedDate, StringFormat=d}" />
         </StackPanel>
         <Calendar Grid.Row="1" Grid.Column="0" Name="Calendar" SelectedDate="{Binding SelectedDate}" Margin="0,0,2,0"/>
-        <Grid Grid.Row="1" Grid.Column="1">
+        <StackPanel Grid.Column="0" Grid.Row="2" Margin="0, 0, 5, 0" VerticalAlignment="Top" Visibility="{Binding EventDescriptionBoxVisible}">
+            <Label>Описание:</Label>
+            <TextBox IsReadOnly="True" MinHeight="70" Text="{Binding Path=SelectedEvent.Description, Mode=OneWay}" />
+        </StackPanel>
+        <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
-                <Button Name="NewEventButton" Content="Cоздать событие" Margin="5"
-                    HorizontalAlignment="Right" VerticalAlignment="Top"
+                <Button Name="NewEventButton" Content="Cоздать событие" Margin="5" 
+                        Click="NewEventButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top"
                     IsEnabled="{Binding HasDateSelected}"/>
                 <Button Name="DeleteEventButton" Content="Удалить событие" Margin="5" 
-                    HorizontalAlignment="Right" VerticalAlignment="Top"
+                        Click="DeleteEventButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top"
                     IsEnabled="{Binding CanDeleteEvent}"/>
-                <Button Name="SaveButton" Content="Сохранить" Margin="5" 
+                <Button Name="SaveButton" Content="Сохранить" Margin="5" Click="SaveButton_Click"
                     HorizontalAlignment="Right" VerticalAlignment="Top"/>
             </StackPanel>
-            <ListView Name="EventsListView" Grid.Row="1" ItemsSource="{Binding SelectedDateEvents}" VerticalAlignment="Stretch">
+            <ListView Name="EventsListView" Grid.Row="1" ItemsSource="{Binding SelectedDateEvents}" SelectedItem="{Binding SelectedEvent}" VerticalAlignment="Stretch">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid Margin="5">
@@ -53,7 +57,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <TextBlock Text="No events for selected date." Grid.Row="1" Visibility="{Binding Path=NoEventsTextVisible}" Margin="5" />
+            <TextBlock Text="На выбранную дату пока нет событий." Grid.Row="1" Visibility="{Binding Path=NoEventsTextVisible}" Margin="5" />
         </Grid>
     </Grid>
 </Window>
